# Software_Renderer

./: README.md
source/: .vscode-ctags  CMakeLists.txt
source/include/: ColoredVertexEffect.hpp  GpuHelper.hpp  Input.hpp  Mesh.hpp  NormaledVertexEffect.hpp  Pipeline.hpp  PipelineBase.hpp  Texture2D.hpp  TexturedVertexEffect.hpp
source/src/: GpuHelper.cpp  Input.cpp  Mesh.cpp  Pipeline.cpp  PipelineBase.cpp  Texture2D.cpp  glad.cpp  main.cpp
